Refactoring SmartAgent module using DynAgent package. Adding the support for parking
Signed-of-by: Filippo Muzzini

--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,6 @@
     </plugins>
   </build>
   <dependencies>
-  	<dependency>
-      <groupId>org.matsim</groupId>
-      <artifactId>matsim-examples</artifactId>
-      <version>0.11.0-SNAPSHOT</version>
-    </dependency>
     <dependency>
       <groupId>org.matsim.contrib</groupId>
       <artifactId>signals</artifactId>
@@ -32,6 +27,24 @@
       <artifactId>otfvis</artifactId>
       <version>0.11.0-SNAPSHOT</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.matsim.contrib</groupId>
+      <artifactId>dvrp</artifactId>
+      <version>0.11.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.matsim.contrib</groupId>
+      <artifactId>parking</artifactId>
+      <version>0.11.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.matsim</groupId>
+    	<artifactId>matsim</artifactId>
+    	<version>0.11.0-SNAPSHOT</version>
+    	<type>pom</type>
     </dependency>
   </dependencies>
 </project>
