--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,17 @@
     	<version>0.11.0-SNAPSHOT</version>
     	<type>pom</type>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.commons</groupId>
+    	<artifactId>commons-math3</artifactId>
+    	<version>3.6.1</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.alex73</groupId>
+    	<artifactId>OSMemory</artifactId>
+    	<version>1.11</version>
+    	<scope>system</scope>
+    	<systemPath>${project.basedir}/lib/OSMemory-1.11.jar</systemPath>
+    </dependency>
   </dependencies>
 </project>
