--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,31 @@
   <groupId>smartcity</groupId>
   <artifactId>smartcity</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+<repositories>
+      <!--Note that in general repositories are not transitive, so they need to be repeated at every level where needed.-->
+		<repository>
+			<!-- Geotools is not on Maven central -->
+			<id>osgeo</id>
+			<name>Geotools repository</name>
+			<url>http://download.osgeo.org/webdav/geotools</url>
+		</repository>
+		<repository>
+			<!-- For MATSim releases: -->
+			<id>matsim</id>
+			<url>https://dl.bintray.com/matsim/matsim</url>
+		</repository>
+		<repository>
+		  <!-- For MATSim monthly snapshots: -->
+		  <id>bintray-matsim-eth-matsim</id>
+		  <name>bintray</name>
+		  <url>https://dl.bintray.com/matsim-eth/matsim</url>
+		</repository>
+ 		<repository>
+		  <!-- For MATSim snapshots: -->
+		  <id>ojo-snapshots</id>
+		  <url>http://oss.jfrog.org/libs-snapshot</url>
+		</repository>	
+</repositories> 
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -18,33 +43,35 @@
   </build>
   <dependencies>
     <dependency>
+    	<groupId>org.matsim</groupId>
+    	<artifactId>matsim</artifactId>
+    	<version>0.11.0-jul18</version>
+    </dependency>
+    <dependency>
       <groupId>org.matsim.contrib</groupId>
       <artifactId>signals</artifactId>
-      <version>0.11.0-SNAPSHOT</version>
+      <version>0.11.0-may18</version>
+        <exclusions>
+        <exclusion>  <!-- declare the exclusion here -->
+          <groupId>org.matsim</groupId>
+          <artifactId>matsim-examples</artifactId>
+        </exclusion>
+        </exclusions>
     </dependency>
     <dependency>
       <groupId>org.matsim.contrib</groupId>
       <artifactId>otfvis</artifactId>
       <version>0.11.0-SNAPSHOT</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.matsim.contrib</groupId>
       <artifactId>dvrp</artifactId>
       <version>0.11.0-SNAPSHOT</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.matsim.contrib</groupId>
       <artifactId>parking</artifactId>
       <version>0.11.0-SNAPSHOT</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.matsim</groupId>
-    	<artifactId>matsim</artifactId>
-    	<version>0.11.0-SNAPSHOT</version>
-    	<type>pom</type>
     </dependency>
     <dependency>
     	<groupId>org.apache.commons</groupId>
