--- a/pom.xml
+++ b/pom.xml
@@ -45,12 +45,12 @@
     <dependency>
     	<groupId>org.matsim</groupId>
     	<artifactId>matsim</artifactId>
-    	<version>0.11.0-jul18</version>
+    	<version>0.11.0-2018w39</version>
     </dependency>
     <dependency>
       <groupId>org.matsim.contrib</groupId>
       <artifactId>signals</artifactId>
-      <version>0.11.0-may18</version>
+      <version>0.11.0-aug18</version>
         <exclusions>
         <exclusion>
           <groupId>org.matsim</groupId>
