--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,24 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+    <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-dependency-plugin</artifactId>
+	    <executions>
+	        <execution>
+	            <id>copy-dependencies</id>
+	            <phase>prepare-package</phase>
+	            <goals>
+	                <goal>copy-dependencies</goal>
+	            </goals>
+	            <configuration>
+	                <outputDirectory>
+	                    ${project.build.directory}/libs
+	                </outputDirectory>
+	            </configuration>
+	        </execution>
+	    </executions>
+	</plugin>
     </plugins>
   </build>
   <dependencies>
@@ -89,6 +107,6 @@
 	     <groupId>org.reflections</groupId>
 	     <artifactId>reflections</artifactId>
 	     <version>0.9.9-RC1</version>
-     </dependency> 
+     </dependency>
   </dependencies>
 </project>
